# ChangeLog for app-portage/eix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 May 2009; Ben de Groot <yngwin@gentoo.org> eix-9999.ebuild:
  Add needed cvs dep

*eix-9999 (05 Apr 2009)

  05 Apr 2009; Ben de Groot <yngwin@gentoo.org> +eix-9999.ebuild:
  Initial commit. Ebuild based on the release version ebuild in portage.
