@@ -1,2 +1,2 @@
-EBUILD eix-9999.ebuild 1565 RMD160 cd44f24fae5c021fbc63898541c9c6e6b41c4787 SHA1 27ae31fa8155970423bd837747e66286cb2b9ffa SHA256 c74cb3d03424ca0a19c791a2c23c0cc15c100acb4656f0f5efb15c06a503b787
-MISC ChangeLog 368 RMD160 d5d011ccae1018268680f58a45c7c2701667d849 SHA1 7ea48c70245e831c0e66248c6d9527972eeffe40 SHA256 5641ba63895b676d43a212104c91fe6c5409b424d900c3038429a9e963353416
+EBUILD eix-9999.ebuild 1595 RMD160 ae4fa8d9d41ddadb44e7228cd22df2ee102c5a06 SHA1 8fd9eeed4b6423d829c1998be22a68a710e14684 SHA256 99148d3801459c73e042d54929c6883dac5b1eab2bd726d7782475c7ce67a211
+MISC ChangeLog 513 RMD160 764621325dfad15b728531daef04c95c8d5d3a21 SHA1 8d1e1c8f21dfe89ad9dddfef755e8f767c7336c6 SHA256 3498a8b3adddd16068091515c8ca57575148d67cb27579ea542c004687189ec7
